--- a/about.html
+++ b/about.html
@@ -4,9 +4,14 @@
 <head>
 
   <title>Gaming landing page</title>
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -17,15 +22,15 @@
 
 <body>
 
-  <nav class="navbar navbar-default navbar-fixed-top" id="pit">
-    <div class="container-fluid">
+   <!-- <div class="container-fluid">
       <div class="navbar-header">
+        <nav class="navbar navbar-default navbar-fixed-top" id="pit">
         </span>
         <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">
           <h>GAME CITY
-            </a>
+        </a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
@@ -47,135 +52,199 @@
             <li><a href="about.html">About us</a></li>
             <li><a href="#">Support</a></li>
       </div>
+      </div>
+  </nav> -->
+
+  <!-- Navigation -->
+    <div class="container-fluid">
+    <!-- <div class="navbar-header"id="kik"> -->
+      <!-- <nav class="navbar navbar-expand-md navbar-fixed-top" style="background-color: #e3f2fd;" > -->
+      <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+	<span class="navbar-toggler-icon"></span>
+</button>
+          <div class="collapse navbar-collapse" id="navbarResponsive min">
+            <ul class="navbar-nav ml-auto" id="pi">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Games
+        </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="game3.html">Angry Birds</a>
+                  <a class="dropdown-item" href="game2.html">Harry Potter</a>
+                  <a class="dropdown-item" href="game1.html">Fifa 18</a>
+                  <a class="dropdown-item" href="#">Word Cross</a>
+                  <a class="dropdown-item" href="#">Subway Surfers</a>
+                  <a class="dropdown-item" href="#">Clash Royale</a>
+                  <a class="dropdown-item" href="#">Nba2K18</a>
+                  <a class="dropdown-item" href="#">8 Ball Pool</a>
+
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Support</a>
+              </li>
+
+            </ul>
+
+          </div>
+        </div>
     </div>
+
   </nav>
-  <br><br>
-  <div class="jumbotron" id="dip">
-    <background-image: url( "t.png");>
-      <h1 id="komo">WHO WE ARE</h1>
-      <!-- <div class="container"> -->
 
+  <!-- <div class="jumbotron" id="dip">
+    <background-image: url( "t.png");></div> -->
+  <h1 id="komo">WHO WE ARE</h1>
+  <!-- <div class="container"> -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
 
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-
-          <div class="item active">
-            <img src="img/w.jpeg" alt="Los Angeles" style="width:100%;" id="pik">
-            <div class="carousel-caption">
-              <h3>GAME CITY</h3>
-              <p>GAME CITY DEVELOPERS</p>
-            </div>
+        <div class="item active">
+          <img src="img/w.jpeg" alt="Los Angeles" style="width:100%;" id="pik">
+          <div class="carousel-caption">
+            <h3>GAME CITY</h3>
+            <p>GAME CITY DEVELOPERS</p>
           </div>
-
-          <div class="item">
-            <img src="img/w.jpeg" alt="Chicago" style="width:100%;" id="pik">
-            <div class="carousel-caption">
-              <h3>GAME CITY</h3>
-              <p>GAME CITY DEVELOPERS</p>
-            </div>
-          </div>
-
-          <div class="item">
-            <img src="img/w.jpeg" alt="New York" style="width:100%;" id="pik">
-            <div class="carousel-caption">
-              <h3> GAME CITY</h3>
-              <p>GAME CITY DEVELOPERS</p>
-            </div>
-          </div>
-
         </div>
 
-        <!-- Left and right controls -->
-        <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <div class="item">
+          <img src="img/w.jpeg" alt="Chicago" style="width:100%;" id="pik">
+          <div class="carousel-caption">
+            <h3>GAME CITY</h3>
+            <p>GAME CITY DEVELOPERS</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="img/w.jpeg" alt="New York" style="width:100%;" id="pik">
+          <div class="carousel-caption">
+            <h3> GAME CITY</h3>
+            <p>GAME CITY DEVELOPERS</p>
+          </div>
+        </div>
+      </div>
+
+
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
         <a class="right carousel-control" href="#myCarousel" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
-    </a> -->
-      </div>
-  </div>
+    </a>
+    </div>
+  <!-- </div> -->
 
   </div>
-<div class="container">
-  <!-- <div class="col-md-8"> -->
+  <div class="container">
+    <!-- <div class="col-md-8"> -->
     <h4><strong>ABOUT</strong></h4>
     <p id="mike">Game City is a global leader in mobile entertainment, providing social gaming experiences for millions of players around the world. Game City is the creative powerhouse behind some of the highest grossing and most enduring social gaming franchises
-      for mobile, including Cookie Jam (a Facebook “Game of the Year” winner) and Pand.Game City is the go-to studio for Hollywood, having developed immersive narrative-rich mobile games for iconic entertainment brands including Harry Potter and Family Guy Game City’s diverse and multi-faceted team is known for its creative
-       excellence and technological innovation in areas including storytelling, data science and consumer insights.</p>
+      for mobile, including Cookie Jam (a Facebook “Game of the Year” winner) and Pand.Game City is the go-to studio for Hollywood, having developed immersive narrative-rich mobile games for iconic entertainment brands including Harry Potter and Family
+      Guy Game City’s diverse and multi-faceted team is known for its creative excellence and technological innovation in areas including storytelling, data science and consumer insights.</p>
   </div>
-<!-- </div> -->
+  <!-- </div> -->
 
-<br><br><br>
-  <div class="row"id="mit">
+  <br><br><br>
+  <div class="container">
+    <h2>Profile Group</h2>
 
-    <div class="col-ms-5">
-      <div class="flex-container">
-      <div class="w3-card-4"id="mit">
-  <img src="img/dev1.jpeg" alt="Norway">
-  <div class="w3-container w3-center">
-    <p id="mit">NAME:Collins Cheruiyot<br>
-      GITHUB:<link https://github.com/cherucole><br>
-      EXPERIENCE:1 MONTH<br>
-      CAREER:web developer<br>
-      Position:C.E.O
 
-    </p>
-  </div>
-</div>
-
-<div class="w3-card-4">
-  <img src="img/dev1.jpeg" alt="Norway">
-  <div class="w3-container w3-center">
-    <p id="mit">NAME:Tom Chege<br>GITHUB:https://github.com/Tom<br>EXPERIENCE:1 MONTH<br>CAREER:web developer</p>
-  </div>
-</div>
-<div class="w3-card-4">
-  <img src="img/dev1.jpeg" alt="Norway">
-  <div class="w3-container w3-center">
-    <p id="mit">NAME:Tonny Kioko<br>GITHUB:https://github.com/Tonny<br>EXPERIENCE:1 MONTH<br>CAREER:web developer</p>
-  </div>
-</div>
-<div class="w3-card-4">
-<img src="img/dev1.jpeg" alt="Norway">
-<div class="w3-container w3-center">
-<p id="mit">NAME:Michael Karanja<br>GITHUB:https://github.com/Kinuthia<br>EXPERIENCE:1 MONTH<br>CAREER:web developer</p>
-</div>
-</div>
-<div class="w3-card-4">
-<img src="img/dev1.jpeg" alt="Norway">
-<div class="w3-container w3-center">
-<p id="mit">NAME:Tonny Muchui<br>GITHUB:https://github.com/Tonny<br>EXPERIENCE:1 MONTH<br>CAREER:web developer</p>
-</div>
-</div>
-</div>
-  </div>
-    </div>
-
-    <div class="jumbotron" id="lip">
-      <h6 id="komo">GAMECITY</h6>
-      <h id="sik">YOU CAN FIND US ON :</h>
-
-      <div col-ms-12 id="cup">
-        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"id="dep"></i></a>
-        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"id="dap"></i></a>
-        <a href="https://www.amazon.com" target="_blank">  <i class="fab fa-amazon"id="dip"></i></a>
-        <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"id="pip"></i></a>
-        <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"id="nit"></i></a>
-        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"id="vip"></i></a>
-        <a href="https://www.apple.com" target="_blank"><i class="fab fa-apple"id="git"></i></a>
-        <p id="sit">© 2018 Game City, Inc. Game CITY® and the Game CITY Logo are registered and/or <br>unregistered trademarks of Game City, Inc. | Privacy Policy | Terms Of Service</p>
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="img/dev1.jpeg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Collins</h4>
+          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+        </div>
+        <div class="card-footer">
+          <div style="">
+            <a href="#"><i class="fa fa-github"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+          </div>
+          <small class="text-muted"></small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="img/dev1.jpeg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Mike</h4>
+          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+        </div>
+        <div class="card-footer">
+          <div style="">
+            <a href="#"><i class="fa fa-github"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+          </div>
+          <small class="text-muted"></small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="img/dev1.jpeg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Tonny</h4>
+          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="img/dev1.jpeg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Kioko</h4>
+          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="img/dev1.jpeg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Tom</h4>
+          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
       </div>
     </div>
+  </div>
+  <div class="jumbotron" id="lip">
+    <h6 id="komo">GAMECITY</h6>
+    <h id="sik">YOU CAN FIND US ON :</h>
+
+    <div col-ms-12 id="cup">
+      <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"id="dzp"></i></a>
+      <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"id="dip"></i></a>
+      <a href="https://www.amazon.com" target="_blank">  <i class="fab fa-amazon"id="dip"></i></a>
+      <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"id="nit"></i></a>
+      <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"id="vip"></i></a>
+      <a href="https://www.apple.com" target="_blank"><i class="fab fa-apple"id="git"></i></a>
+      <p id="sit">© 2018 Game City, Inc. Game CITY® and the Game CITY Logo are registered and/or <br>unregistered trademarks of Game City, Inc. | Privacy Policy | Terms Of Service</p>
+    </div>
+  </div>
   </div>
 
 </body>
