--- a/game2.html
+++ b/game2.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="styles.css"
+  <!-- <link rel="stylesheet" href="css/styles.css" -->
   <link rel="stylesheet" href="css/game2.css">
 
   <title>Harry Potter</title>
@@ -22,45 +22,45 @@
 
 <body>
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+  <nav class="navbar navbar-expand-md navbar-light  fixed-top">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 	<span class="navbar-toggler-icon"></span>
 </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a id="navtext" class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Games
         </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="game3.html">Angry Birds</a>
-              <a class="dropdown-item" href="game2.html">Harry Potter</a>
-              <a class="dropdown-item" href="game1.html">Fifa 18</a>
-              <a class="dropdown-item" href="#">Word Cross</a>
-              <a class="dropdown-item" href="#">Subway Surfers</a>
-              <a class="dropdown-item" href="#">Clash Royale</a>
-              <a class="dropdown-item" href="#">Nba2K18</a>
-              <a class="dropdown-item" href="#">8 Ball Pool</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="game3.html">Angry Birds</a>
+							<a class="dropdown-item" href="game2.html">Harry Potter</a>
+							<a class="dropdown-item" href="game1.html">Fifa 18</a>
+							<a class="dropdown-item" href="#">Word Cross</a>
+							<a class="dropdown-item" href="#">Subway Surfers</a>
+							<a class="dropdown-item" href="#">Clash Royale</a>
+							<a class="dropdown-item" href="#">Nba2K18</a>
+							<a class="dropdown-item" href="#">8 Ball Pool</a>
 
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Support</a>
-          </li>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a id="navtext" class="nav-link" href="about.html">About Us</a>
+					</li>
+					<li class="nav-item">
+						<a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
+					</li>
 
-        </ul>
+				</ul>
 
-      </div>
-    </div>
-  </nav>
+			</div>
+		</div>
+	</nav>
   <div class="container">
     <div class="jumbotron">
     </div>
