added style to navbar

--- a/about.html
+++ b/about.html
@@ -56,25 +56,25 @@
   </nav> -->
 
   <!-- Navigation -->
-    <div class="container-fluid">
+    <!-- <div class="container-fluid"> -->
     <!-- <div class="navbar-header"id="kik"> -->
-      <!-- <nav class="navbar navbar-expand-md navbar-fixed-top" style="background-color: #e3f2fd;" > -->
+       <!-- <nav class="navbar navbar-expand-md navbar-fixed-top" style="background-color: #e3f2fd;"> -->
       <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
+        <div class="container-fluid"style="background-color: black; margin-left:-25px; margin-right:-100px;">
+          <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"style="width: 120px;"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 	<span class="navbar-toggler-icon"></span>
 </button>
           <div class="collapse navbar-collapse" id="navbarResponsive min">
             <ul class="navbar-nav ml-auto" id="pi">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html"style="color:white; font-size:15px;">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"style="color:white; font-size:15px;">
           Games
         </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown"style="color:white; font-size:15px;">
                   <a class="dropdown-item" href="game3.html">Angry Birds</a>
                   <a class="dropdown-item" href="game2.html">Harry Potter</a>
                   <a class="dropdown-item" href="game1.html">Fifa 18</a>
@@ -87,10 +87,10 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="about.html"style="color:white;  font-size:15px;">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Support</a>
+                <a class="nav-link" href="#"style="color:white;  font-size:15px;">Support</a>
               </li>
 
             </ul>
