minor edits on ui

--- a/game1.html
+++ b/game1.html
@@ -23,44 +23,43 @@
   <div class="container-fluid">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light  fixed-top">
-  		<div class="container-fluid">
-  			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
-  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-  	<span class="navbar-toggler-icon"></span>
-  </button>
-  			<div class="collapse navbar-collapse" id="navbarResponsive">
-  				<ul class="navbar-nav ml-auto">
-  					<li class="nav-item active">
-  						<a id="navtext" class="nav-link" href="index.html">Home</a>
-  					</li>
-  					<li class="nav-item dropdown">
-  						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+  	<span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a id="navtext" class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Games
           </a>
-  						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-  							<a class="dropdown-item" href="game3.html">Angry Birds</a>
-  							<a class="dropdown-item" href="game2.html">Harry Potter</a>
-  							<a class="dropdown-item" href="game1.html">Fifa 18</a>
-  							<a class="dropdown-item" href="#">Word Cross</a>
-  							<a class="dropdown-item" href="#">Subway Surfers</a>
-  							<a class="dropdown-item" href="#">Clash Royale</a>
-  							<a class="dropdown-item" href="#">Nba2K18</a>
-  							<a class="dropdown-item" href="#">8 Ball Pool</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="game3.html">Angry Birds</a>
+                <a class="dropdown-item" href="game2.html">Harry Potter</a>
+                <a class="dropdown-item" href="game1.html">Fifa 18</a>
+                <a class="dropdown-item" href="#">Word Cross</a>
+                <a class="dropdown-item" href="#">Subway Surfers</a>
+                <a class="dropdown-item" href="#">Clash Royale</a>
+                <a class="dropdown-item" href="#">Nba2K18</a>
+                <a class="dropdown-item" href="#">8 Ball Pool</a>
 
-  						</div>
-  					</li>
-  					<li class="nav-item">
-  						<a id="navtext" class="nav-link" href="about.html">About Us</a>
-  					</li>
-  					<li class="nav-item">
-  						<a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
-  					</li>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a id="navtext" class="nav-link" href="about.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
+            </li>
 
-  				</ul>
+          </ul>
 
-  			</div>
-  		</div>
-  	</nav>
+        </div>
+      </div>
+    </nav>
     <div class="jumbotron" style="margin-bottom: 2px;margin-top: -13px;">
       <div class="net">
         <div class="about">
