--- a/game2.html
+++ b/game2.html
@@ -23,44 +23,43 @@
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light  fixed-top">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-	<span class="navbar-toggler-icon"></span>
-</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a id="navtext" class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+	<span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a id="navtext" class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Games
         </a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="game3.html">Angry Birds</a>
-							<a class="dropdown-item" href="game2.html">Harry Potter</a>
-							<a class="dropdown-item" href="game1.html">Fifa 18</a>
-							<a class="dropdown-item" href="#">Word Cross</a>
-							<a class="dropdown-item" href="#">Subway Surfers</a>
-							<a class="dropdown-item" href="#">Clash Royale</a>
-							<a class="dropdown-item" href="#">Nba2K18</a>
-							<a class="dropdown-item" href="#">8 Ball Pool</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="game3.html">Angry Birds</a>
+              <a class="dropdown-item" href="game2.html">Harry Potter</a>
+              <a class="dropdown-item" href="game1.html">Fifa 18</a>
+              <a class="dropdown-item" href="#">Word Cross</a>
+              <a class="dropdown-item" href="#">Subway Surfers</a>
+              <a class="dropdown-item" href="#">Clash Royale</a>
+              <a class="dropdown-item" href="#">Nba2K18</a>
+              <a class="dropdown-item" href="#">8 Ball Pool</a>
 
-						</div>
-					</li>
-					<li class="nav-item">
-						<a id="navtext" class="nav-link" href="about.html">About Us</a>
-					</li>
-					<li class="nav-item">
-						<a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
-					</li>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a id="navtext" class="nav-link" href="about.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
+          </li>
 
-				</ul>
+        </ul>
 
-			</div>
-		</div>
-	</nav>
+      </div>
+    </div>
+  </nav>
   <div class="container">
     <div class="jumbotron">
     </div>
@@ -81,7 +80,7 @@ AVAILABLE NOW</h2>
     <div id="divider" class="row">
       <img src="img/line.jpg" alt=""></div>
     <div class="container">
-      <h2 id= "caps"><p align="center">Trailer</h2></p>
+      <h2 id="caps"><p align="center">Trailer</h2></p>
       <iframe width="1000" height="600" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center" id="frame"></iframe>
     </div>
     <div id="divider" class="row"><br>
