--- a/game3.html
+++ b/game3.html
@@ -16,10 +16,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light  fixed-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-	<span class="navbar-toggler-icon"></span>
-</button>
+	<a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
+  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+	<span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
