--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-light  fixed-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
+			<a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 	<span class="navbar-toggler-icon"></span>
 </button>
@@ -78,7 +78,7 @@
 		<div class="carousel-inner" role="listbox">
 			<div class="carousel-item active">
 				<a href="game3.html">
-	      <img class="d-block img-fluid" src="img/carousel/bannerab.jpg" alt="First slide" style="width:100%;">
+	      <img class="d-block img-fluid" src="img/carousel/abbanner.png" alt="First slide" style="width:100%;">
 			</a>
 
 			</div>
@@ -88,16 +88,16 @@
 				</a>
 			</div>
 			<div class="carousel-item">
-				<img class="d-block img-fluid" src="img/carousel/bannersubway.jpg" alt="Third slide" style="width:100%;">
+				<img class="d-block img-fluid" src="img/carousel/clash.jpeg" alt="Third slide" style="width:100%;">
 			</div>
 			<div class="carousel-item">
-				<img class="d-block img-fluid" src="img/carousel/banner2k.png" alt="Third slide" style="width:100%;">
+				<img class="d-block img-fluid" src="img/carousel/bannersubway.jpg" alt="Third slide" style="width:100%;">
 			</div>
 			<div class="carousel-item">
 				<img class="d-block img-fluid" src="img/carousel/bannerdrag.jpg" alt="Third slide" style="width:100%;">
 			</div>
 			<div class="carousel-item">
-				<img class="d-block img-fluid" src="img/carousel/bannerclash.jpg" alt="Third slide" style="width:100%;">
+				<img class="d-block img-fluid" src="img/carousel/clash.jpeg" alt="Third slide" style="width:100%;">
 			</div>
 			<div class="carousel-item">
 				<a href="game2.html">
@@ -215,7 +215,7 @@
 				<div class="col-md-6">
 					<div id="jumboFeedback" class="jumbotron">
 						<h2>Subscribe for new games</h2>
-						<form id="subscribe">
+						<form id="subscribe" method="POST" action="https://formspree.io/cherucole94@gmail.com">
 							<div class="form-group">
 								<label for="Your Name">Your Email</label>
 								<input style="width:60%;" type="text" class="form-control" id="emailSub" placeholder="Your Email">
