--- a/privacy.html
+++ b/privacy.html
@@ -20,7 +20,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-light  fixed-top" style="background-color: #e3f2fd;">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
+			<a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 	<span class="navbar-toggler-icon"></span>
 </button>
